--- a/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
+++ b/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ZaminEducationClone.Data\ZaminEducationClone.Data.csproj" />
+  </ItemGroup>
+
 </Project>
