extensions, services, others

--- a/ZaminEducationClone.Service/ZaminEducationClone.Service.csproj
+++ b/ZaminEducationClone.Service/ZaminEducationClone.Service.csproj
@@ -5,9 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZaminEducationClone.Data\ZaminEducationClone.Data.csproj" />
+    <ProjectReference Include="..\ZaminEducationClone.Domain\ZaminEducationClone.Domain.csproj" />
   </ItemGroup>
 
 </Project>
