--- a/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
+++ b/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
@@ -9,11 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ZaminEducationClone.Data\ZaminEducationClone.Data.csproj" />
+    <ProjectReference Include="..\ZaminEducationClone.Service\ZaminEducationClone.Service.csproj" />
   </ItemGroup>
 
 </Project>
