finally usercontroller finish

--- a/ZaminEducationClone.Api/appsettings.json
+++ b/ZaminEducationClone.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ZaminDataBase": "Server=localhost; Port=5432; Database=ZaminEdu; User Id=postgres; Password=asadbek;"
+  }
 }
