--- a/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
+++ b/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
@@ -1,20 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZaminEducationClone.Data\ZaminEducationClone.Data.csproj" />
-    <ProjectReference Include="..\ZaminEducationClone.Service\ZaminEducationClone.Service.csproj" />
+	  <ProjectReference Include="..\ZaminEducationClone.Domain\ZaminEducationClone.Domain.csproj" />
+	  <ProjectReference Include="..\ZaminEducationClone.Service\ZaminEducationClone.Service.csproj" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
