--- a/ZaminEducationClone.Api/appsettings.json
+++ b/ZaminEducationClone.Api/appsettings.json
@@ -6,6 +6,27 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Overrides": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
+    },
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ZaminDataBase": "Server=localhost; Port=5432; Database=ZaminEdu; User Id=postgres; Password=asadbek;"
