--- a/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
+++ b/ZaminEducationClone.Api/ZaminEducationClone.Api.csproj
@@ -22,4 +22,9 @@
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\Videos\" />
+  </ItemGroup>
+
 </Project>
