--- a/ZaminEducationClone.Api/appsettings.json
+++ b/ZaminEducationClone.Api/appsettings.json
@@ -30,5 +30,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ZaminDataBase": "Server=localhost; Port=5432; Database=ZaminEdu; User Id=postgres; Password=asadbek;"
+  },
+  "Storage": {
+    "ImageUrl": "Images",
+    "VideoUrl": "Videos"
   }
 }
