--- a/ZaminEducationClone.Api/appsettings.json
+++ b/ZaminEducationClone.Api/appsettings.json
@@ -29,7 +29,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ZaminDataBase": "Server=localhost; Port=5432; Database=ZaminEdu; User Id=postgres; Password=asadbek;"
+    "ZaminDataBase": "Server=localhost; Port=5432; Database=ZaminClone; User Id=postgres; Password=asadbek;"
   },
   "Storage": {
     "ImageUrl": "Images",
