add Basic authorization

--- a/ZaminEducationClone.Api/appsettings.json
+++ b/ZaminEducationClone.Api/appsettings.json
@@ -34,5 +34,9 @@
   "Storage": {
     "ImageUrl": "Images",
     "VideoUrl": "Videos"
+  },
+  "Authorization" : {
+    "User": "admin",
+    "Password": "12345"
   }
 }
